[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
pdfplumber = "^0.7.1"
telebot = "^0.0.4"
wget = "^3.2"
pyTelegramBotAPI = "^4.6.0"
nltk = "^3.7"
jsonpickle = "^2.2.0"
PyPDF2 = "^2.5.0"
convertapi = "^1.4.0"
requests = "^2.28.1"
youtube-transcript-api = "^0.4.4"
gTTS = "^2.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"